# yaep

./: .gitignore  BUGFIX_DOUBLE_FREE.md  CHANGELOG.md  CMAKE_FIX_SUMMARY.md  CMakeLists.txt  Doxyfile  LEO_VERIFICATION.md  MODERNIZATION_PLAN.md  Makefile  Makefile.in  P4_INTEGRATION_COMPLETE.md  README.md  SHARED_LIBRARY_SUPPORT.md  VALGRIND_FIX_USE_AFTER_FREE.md  WARNINGS_CATALOG.md  WARNING_RESOLUTION.md  config.status  configure  configure.ac  fix_casts.py  meta-grammar.ebnf  test_const.c
LLM_Modern/: BISON_ANALYSIS.md  C17_MODERNIZATION_PLAN.md  LONGJMP_ELIMINATION_COMPLETE.md  PROGRESS_SUMMARY.md  README_C17_BRANCH.md  SAFE_REFACTORINGS.md
LLM_REFACTOR/: EARLEY_OPTIMIZATION_CHECKLIST.md  GATE_P0_REPORT.md  GATE_P2_REPORT.md  GATE_P3_REPORT.md  IMPLEMENTATION_EXECUTION_PLAN.md  OPTIMIZATION_CHECKLIST.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_VERIFICATION.txt  P1_BATCH_maybe_uninitialized_PLAN.md  P1_BATCH_shadow_PLAN.md  P2_CODE_STRUCTURE_ANALYSIS.md  P2_P7_IMPLEMENTATION_GUIDE.md  P3_003_PER_SET_DEDUP_ANALYSIS.md  P4_LEO_DESIGN.md  PERF_BASELINE.json  PERF_BASELINE_P3.json  TEST_INVENTORY.md  WARNINGS_BASELINE.md  WARNINGS_ELIMINATION_REPORT.md  WARNINGS_INDEX.csv  YAEP_REFACTOR_EXPANSION_PLAN.md  test_list_raw.txt  valgrind_bench_baseline.txt  valgrind_p1_check.txt  warnings_signature_top30.txt
LLM_Warning_Fixes/: P1_BATCH_maybe_uninitialized_PLAN.md  P1_FINAL_STATUS_REPORT.md  P1_REMAINING_WARNINGS.md  WARNINGS_BASELINE.md  WARNINGS_PLAN_P1.md  warnings_sample_head.txt
autom4te.cache/: output.0  requests  traces.0
bench/: CMakeLists.txt  bench_driver.c  bench_harness.c
doc/: CMakeLists.txt  DOXYGEN_INTEGRATION.md  README.md  YAEP_CPP_API.md  YAEP_C_API.md  YAEP_GRAMMAR.md  unicode_support.md
doc/unicode_design/: MODERNIZATION_PLAN.md  UNICODE_REVIEW.md  UTF8_GAP_CLOSURE_v2.md  unicode_support.md  utf8_robustness_checklist.md
examples/: EXAMPLE_SUMMARY.md  README.md  calculator.ebnf  calculator.json  calculator_documented.ebnf  ebnf-production.yaep  meta-grammar-advanced.yaep.backup  meta-grammar-simple.yaep  meta-grammar.yaep  parse_meta_grammar  parse_meta_grammar.c  simple_ebnf.yaep  simple_working.yaep  test_basic.ebnf  test_basic.json  test_simple.ebnf  test_simple.json  test_simple_mini.ebnf  test_terminals.yaep  test_tiny.ebnf  tiny.json  tiny.yaep
fuzz/: README.md  auto_expand_corpus.sh  build_libfuzzer.sh  corpus_stats.py  expand_corpus.py  fuzz_yaep.c  run_fuzz_campaign.sh  run_one.c
fuzz/corpus/: arithmetic.txt  malformed1.txt  malformed2.txt  null_bytes.txt  recursive.txt  simple_grammar.txt
python/: CMakeLists.txt  INTEGRATION.md  PYTHON_WRAPPER_STATUS.md  README.md  mypy.ini  pyproject.toml
python/examples/: README.md  free_tree_example.py  read_grammar_example.py  regex_vs_grammar_example.py  set_debug_level_example.py  set_error_recovery_flag_example.py  set_lookahead_level_example.py  set_one_parse_flag_example.py  set_recovery_match_example.py  visualize_parse_tree.py
python/history_docs/: WRAPPER_IMPLEMENTATION_CHECKLIST.md
python/src/yaep_python/: __init__.py  _cffi.py  ast.py  tree_utils.py
python/tests/: test_free_with_termcb.py  test_full_parse.py  test_parse_valid_and_invalid.py  test_parse_with_tokens.py  test_read_grammar.py  test_setters.py  test_smoke.py  test_tree_ast.py  test_tree_utils.py
src/: CMakeLists.txt  ChangeLog  earley_engine.c  earley_engine.h  hashtab.c  hashtab.cpp  hashtab.h  leo_opt.c  leo_opt.cpp  leo_opt.h  mem_pool.c  mem_pool.h  objstack.c  objstack.cpp  objstack.h  sgramm.c  sgramm.y  vlobject.cpp  vlobject.h  yaep++_test  yaep.c  yaep.cpp  yaep.h  yaep_cleanup.h  yaep_error.c  yaep_error.h  yaep_internal.h  yaep_macros.h  yaep_test
src/unicode/: yaep_unicode.c  yaep_unicode.h
test/: CMakeLists.txt  ansic.h  ansic.l  test_mem_pool.c  ticker.cpp
test/C/: CMakeLists.txt  Makefile  common.h  test21.c  test22.c  test23.c  test24.c  test25.c  test26.c  test41.c  test44.c  test50.c  test_concurrent_parse.c  test_concurrent_parse_mutex.c  test_concurrent_parse_process.c  test_hash_stability.c  test_nfc_cases.c  test_truncate_edge.c  test_truncate_long.c  test_utf8.c  test_utf8_double.c  test_utf8_identifier.c  test_utf8_invalid.c  test_utf8_iterator.c  test_utf8_normalization.c  test_utf8_persistence.c  test_utf8_simple.c  test_utf8_truncation.c
test/C++/: CMakeLists.txt  Makefile  common.h  test06.cpp  test21.cpp  test22.cpp  test23.cpp  test24.cpp  test25.cpp  test26.cpp  test41.cpp  test44.cpp  test_utf8.cpp  test_utf8_invalid.cpp  test_utf8_nonbmp.cpp
test/common/: ansi_grammar.txt
test/compare_parsers/: CMakeLists.txt  Makefile  ansi_grammar_data.h  ansic.c  ansic.tab.c  ansic.tab.h  ansic.y  compare_parsers.sh  test_common.c  test_yaep.c  test_yaep.c.description  test_yyparse.c
tools/: python_wrapper_test.py
